--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "antd": "^5.24.7",
+    "axios": "^1.11.0",
     "next": "15.3.0",
+    "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
